# search

./: .gitignore  CMakeLists.txt  README.md  usjsearch.pc  usjsearch.pc.in
include/: usjAILHead.h  usjAILSearches.h  usjMapProblem.h
maps/: Romania.map
src/: Data.cpp  MapRoutePlanner.cpp  usjAIL.cpp  usjAILSearches.cpp  usjAILsrc.cpp  usjMapProblem.cpp
